// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h1
    className="text-center"
  >
    Playlist
  </h1>
  <div
    className="pre-scrollable"
  >
    <Connect(PlaylistItem)
      key="1"
      song={
        Object {
          "album": "tincidunt in",
          "artist": "Erika McTerry",
          "duration": 3.25,
          "title": "id nulla ultrices",
        }
      }
    />
  </div>
</div>
`;

exports[`renders correctly with empty playlist 1`] = `
<div>
  <h1
    className="text-center"
  >
    Playlist
  </h1>
  <div
    className="pre-scrollable"
  >
    <h2
      className="text-center"
    >
      No songs in playlist
    </h2>
  </div>
</div>
`;
